fixed alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,7 @@ ul
     border: none;
     outline: none;
     transition: 0.4s;
+    line-height: 20px
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
